--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing_Page Arquitetura</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -55,9 +55,6 @@
         </form>
     </div>
 
-    <!-- link do banco de dados 
-    https://docs.google.com/spreadsheets/d/1w7Tn1Uo6UQ98QxdzPfcenLw4iN9QoWvaok9nDY52wqA/edit#gid=0
-    -->
 </body>
 
 </html>
